Fixed dates in posts

--- a/templates/post.twig
+++ b/templates/post.twig
@@ -39,7 +39,7 @@
         <header>
           <h1>{{ options.title }}</h1>
           <div class="info">
-            <time datetime="{{ item.date|date("Y, F j") }}">{{ item.date|date("Y, F j") }}</time>
+            <time datetime="{{ options.date|date("Y, F j") }}">{{ options.date|date("Y, F j") }}</time>
             <span>by {{ global.author }}</span>
           </div>
         </header>
