--- a/templates/index.twig
+++ b/templates/index.twig
@@ -35,7 +35,7 @@
 
       {% include "partials/navigation.twig" %}
 
-      <h2>Notes</h2>
+      <h2>Posts</h2>
 
       <ul class="article-list">
         {% for item in list %}
@@ -45,6 +45,10 @@
         </li>
         {% endfor %}
       </ul>
+
+      <h2>Projects</h2>
+
+      {% include "partials/projects.twig" %}
 
     </main>
 
