--- a/templates/index.twig
+++ b/templates/index.twig
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#ffffff">
     <meta name="generator" content="https://github.com/mitjafelicijan/staticgen">
 
-    <link rel="preconnect" href="https://www.google-analytics.com">
+    {% include "partials/preconnect.twig" %}
 
     <title>{{ global.title }}</title>
     <meta name="author" content="{{ global.author }}">
