--- a/templates/index.twig
+++ b/templates/index.twig
@@ -39,7 +39,7 @@
       {% include "partials/posts.twig" %}
 
 
-      <h2>Projects</h2>
+      <h2>Side projects</h2>
       {% include "partials/projects.twig" %}
 
     </main>
