--- a/templates/partials/navigation.twig
+++ b/templates/partials/navigation.twig
@@ -3,4 +3,5 @@
   <a href="/curriculum-vitae.html">CV</a>
   <a href="https://twitter.com/mitjafelicijan" target="_blank" rel="noopener nofollow">Twitter</a>
   <a href="https://github.com/mitjafelicijan" target="_blank" rel="noopener nofollow">Github</a>
+  <a href="/weekly-links.html">Weekly links</a>
 </nav>
