Added json template and upgraded code to allow testing

--- a/emailing/template.hbs
+++ b/emailing/template.hbs
@@ -4,7 +4,7 @@
     <title></title>
   </head>
 
-  <body style="background: #f2f2f2; padding: 60px; color: #222222; line-height: 22px; font-family: sans; font-size: 16px;">
+  <body style="background: #f2f2f2; padding: 60px; color: #222222; line-height: 22px; font-family: sans-serif, system-ui, -apple-system; font-size: 16px;">
 
     <div style="width: 650px; background: #ffffff; text-align: left; padding: 40px; margin: 0 auto; border-radius: 10px;">
 
