--- a/newsletter/templates/index.hbs
+++ b/newsletter/templates/index.hbs
@@ -26,7 +26,7 @@
       <h2>Weekly links archive</h2>
       <ul class="article-list">
         {{#each files}}
-          <li><a href="/weekly-links/{{ this.file }}">{{ this.year }}, {{ this.week }}</a></li>
+          <li><a href="/weekly-newsletter-archive/{{ this.file }}">{{ this.year }}, {{ this.week }}</a></li>
         {{/each}}
       </ul>
 
