--- a/template/_meta.html
+++ b/template/_meta.html
@@ -7,3 +7,5 @@
 
 <link rel="alternate" type="application/rss+xml" href="/feed.rss">
 <link rel="alternate" type="application/feed+json" href="/feed.json">
+
+<link rel="icon" href="/assets/general/favicon.png" type="image/png">
