--- a/template/style.css
+++ b/template/style.css
@@ -268,6 +268,12 @@ time {
   .navigation header { padding: 0 20px; }
 }
 
+@media only screen and (max-width: 600px) {
+  .navigation header { display: block; }
+  .navigation header h3 { text-align: center; margin-bottom: 10px; }
+  .navigation header nav { text-align: center; }
+}
+
 
 /* light/dark mode */
 
