--- a/template/index.html
+++ b/template/index.html
@@ -6,6 +6,8 @@
 
     <title>{{.Title}}</title>
     <meta name="description" content="{{.Description}}">
+    <meta property="og:title" content="{{.Title}}">
+    <meta property="og:description" content="{{.Description}}">
   </head>
 
   <body>
