--- a/template/index.html
+++ b/template/index.html
@@ -22,7 +22,7 @@
         <ul class="post-list">
           {{range $index, $post := .Posts}}
           <li>
-            <time>{{.Created}}</time>
+            <time>{{.CreatedFormatted}}</time>
 
             <a href="/{{$post.Slug}}" title="{{$post.Title}}" itemprop="url">
               <h2>{{$post.Title}}</h2>
