--- a/template/post.html
+++ b/template/post.html
@@ -18,7 +18,7 @@
       <article itemtype="http://schema.org/Article">
         <header>
           <h1 itemtype="headline">{{.Title}}</h1>
-          <time>{{.Created}}</time>
+          <time>{{.CreatedFormatted}}</time>
         </header>
         <div>
           {{.Content}}
