Added new projects and cleaned up some templates

--- a/template/_navigation.html
+++ b/template/_navigation.html
@@ -10,7 +10,7 @@
       <a href="/my-music.html">My Music</a>
       <a href="/curriculum-vitae.html">CV</a>
       <a href="https://github.com/mitjafelicijan" target="_blank" rel="noopener nofollow" itemprop="url">Github</a>
-      <a href="/feed.rss" itemprop="url">RSS feed</a>
+      <a href="/feed.rss" itemprop="url">RSS Feed</a>
     </nav>
   </header>
 </div>
