--- a/template/index.html
+++ b/template/index.html
@@ -39,6 +39,7 @@
       <section class="project-list">
         <h4>Side projects I work on</h4>
         <ul>
+          <li><a href="https://github.com/mitjafelicijan/journalctl-proxy" target="_blank" rel="noopener nofollow">journalctl-proxy - Exposes your systemd logs to web via web interface</a></li>
           <li><a href="https://github.com/mitjafelicijan/redis-marshal" target="_blank" rel="noopener nofollow">redis-marshal - Lightweight Redis data exploration tool</a></li>
           <li><a href="https://github.com/mitjafelicijan/dna-encoding" target="_blank" rel="noopener nofollow">dna-encoding - Tools for encoding files to DNA sequence</a></li>
           <li><a href="https://github.com/mitjafelicijan/unfold" target="_blank" rel="noopener nofollow">unfold - Elastic Beanstalk like deployments for DigitalOcean</a></li>
@@ -51,6 +52,7 @@
       <hr class="top-margin">
 
       {{template "openring-build.html"}}
+
     </main>
 
   </body>
