--- a/template/post.html
+++ b/template/post.html
@@ -18,7 +18,9 @@
       <article itemtype="http://schema.org/Article">
         <header>
           <h1 itemtype="headline">{{.Title}}</h1>
+          {{if .Listing}}
           <time>{{.CreatedFormatted}}</time>
+          {{end}}
         </header>
         <div>
           {{.Content}}
@@ -26,31 +28,31 @@
       </article>
 
       {{if .Listing}}
-        <section class="top-margin">
-          <a href="mailto:m@mitjafelicijan.com">➝ Get in contact with me via email.</a>
-        </section>
+      <section class="top-margin">
+        <a href="mailto:m@mitjafelicijan.com">➝ Get in contact with me via email.</a>
+      </section>
 
-        <hr class="top-margin">
+      <hr class="top-margin">
 
-        {{if .Posts}}
-          <nav class="top-margin">
-            <h4>Read more from this site</h4>
-            {{range $index, $post := .Posts}}
-              {{if (lt $index 5)}}
-              <p>
-                <time>{{$post.CreatedFormatted}}</time><br>
-                <a href="/{{$post.Slug}}" title="{{$post.Title}}" itemprop="url">
-                  {{$post.Title}}
-                </a>
-              </p>
-              {{end}}
-            {{end}}
-          </nav>
+      {{if .Posts}}
+      <nav class="top-margin">
+        <h4>Read more from this site</h4>
+        {{range $index, $post := .Posts}}
+        {{if (lt $index 5)}}
+        <p>
+          <time>{{$post.CreatedFormatted}}</time><br>
+          <a href="/{{$post.Slug}}" title="{{$post.Title}}" itemprop="url">
+            {{$post.Title}}
+          </a>
+        </p>
         {{end}}
+        {{end}}
+      </nav>
+      {{end}}
 
-        <hr class="top-margin">
+      <hr class="top-margin">
 
-        {{template "openring-build.html"}}
+      {{template "openring-build.html"}}
       {{end}}
 
     </main>
