--- a/template/_meta.html
+++ b/template/_meta.html
@@ -3,9 +3,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-<link rel="stylesheet" href="/style.css">
+<link rel="stylesheet" href="/style.css?v=20210731-09">
 
 <link rel="alternate" type="application/rss+xml" href="/feed.rss">
 <link rel="alternate" type="application/feed+json" href="/feed.json">
 
-<link rel="icon" href="/assets/general/favicon.png" type="image/png">
+<link rel="icon" href="/assets/general/favicon.png?v=20210731-01" type="image/png">
