Added sample YapYap feed

--- a/template/_meta.html
+++ b/template/_meta.html
@@ -7,5 +7,6 @@
 
 <link rel="alternate" type="application/rss+xml" href="/feed.rss">
 <link rel="alternate" type="application/feed+json" href="/feed.json">
+<link rel="alternate" type="application/rss+xml" href="/yapyap.xml" title="YapYap">
 
 <link rel="icon" href="/assets/general/favicon.png?v=20210731-01" type="image/png">
