--- a/template/_navigation.html
+++ b/template/_navigation.html
@@ -7,6 +7,7 @@
     <nav itemscope itemtype="http://schema.org/SiteNavigationElement" class="main-navigation">
       <meta itemprop="name" content="Main Menu">
 
+      <a href="/yapyap.xml" itemprop="url">YapYap</a>
       <a href="https://github.com/mitjafelicijan" target="_blank" rel="noopener nofollow" itemprop="url">Github</a>
       <a href="/curriculum-vitae.html">CV</a>
       <a href="/feed.rss" itemprop="url">RSS Feed</a>
