Added dithered images

--- a/template/_meta.html
+++ b/template/_meta.html
@@ -3,10 +3,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-<link rel="stylesheet" href="/style.css?v=20210731-11">
+<link rel="stylesheet" href="/style.css?v=2021-10-07">
 
 <link rel="alternate" type="application/rss+xml" href="/feed.rss">
 <link rel="alternate" type="application/feed+json" href="/feed.json">
 <link rel="alternate" type="application/rss+xml" href="/yapyap.xml" title="YapYap">
 
-<link rel="icon" href="/assets/general/favicon.png?v=20210731-01" type="image/png">
+<link rel="icon" href="/assets/general/favicon.png?v=2021-10-07" type="image/png">
