--- a/template/_includes.html
+++ b/template/_includes.html
@@ -1,3 +1,3 @@
 <!-- user code -->
 
-<script src="/script.js?v=2021-10-07-3" async></script>
+<script src="/script.js?v=2021-10-08" async></script>
