Added theme color

--- a/template/_footer.html
+++ b/template/_footer.html
@@ -1,7 +1,7 @@
 <div class="footer">
   <footer class="wrapper">
     This website does not track you.
-    Content is made available under the <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">CC BY 4.0 license</a> unless specified otherwise.
+    Content is made available under the <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="noreferrer">CC BY 4.0 license</a> unless specified otherwise.
     Blog feed available as <a href="/feed.rss" target="_blank">RSS</a> or <a href="/feed.json" target="_blank">JSON</a> feeds.
   </footer>
 </div>
