--- a/template/_meta.html
+++ b/template/_meta.html
@@ -3,6 +3,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+<meta name="theme-color" content="#ffffff">
+
 <link rel="stylesheet" href="/style.css?v=2021-10-07-3">
 
 <link rel="alternate" type="application/rss+xml" href="/feed.rss">
