Move back to Times font and cleanup

--- a/template/_meta.html
+++ b/template/_meta.html
@@ -5,10 +5,10 @@
 
 <meta name="theme-color" content="#ffffff">
 
-<link rel="stylesheet" href="/style.css?v=2021-10-07-3">
+<link rel="stylesheet" href="/style.css?v=2021-12-07-2">
 
 <link rel="alternate" type="application/rss+xml" href="/feed.rss">
 <link rel="alternate" type="application/feed+json" href="/feed.json">
 <link rel="alternate" type="application/rss+xml" href="/yapyap.xml" title="YapYap">
 
-<link rel="icon" href="/assets/general/favicon.png?v=2021-10-07" type="image/png">
+<link rel="icon" href="/assets/general/favicon.png?v=2021-12-07-1" type="image/png">
