--- a/template/index.html
+++ b/template/index.html
@@ -15,7 +15,7 @@
     {{template "_navigation.html"}}
 
     <main class="wrapper">
-      <h2>Posts</h2>
+      <h2>Blog posts</h2>
       <nav itemscope itemtype="https://schema.org/SiteNavigationElement">
         <meta itemprop="name" content="Article list">
 
