--- a/template/post.html
+++ b/template/post.html
@@ -19,7 +19,7 @@
         <header>
           <h1 itemtype="headline">{{.Title}}</h1>
           {{if .Listing}}
-          <time>{{.CreatedFormatted}}</time>
+          <time>Posted on {{.CreatedFormatted}}</time>
           {{end}}
         </header>
         <div>
