--- a/template/_navigation.html
+++ b/template/_navigation.html
@@ -10,6 +10,8 @@
       <!-- <a href="/yapyap.xml" itemprop="url">YapYap</a> -->
       <a href="https://github.com/mitjafelicijan" target="_blank" rel="noopener nofollow" itemprop="url">Github</a>
       <a href="/curriculum-vitae.html">CV</a>
+
+      <a href="https://feedbin.com/starred/28977384dcc292a0a400e36cd9bcf64e.xml" itemprop="url">Starred</a>
       <a href="/feed.rss" itemprop="url">RSS Feed</a>
     </nav>
   </header>
