--- a/template/_navigation.html
+++ b/template/_navigation.html
@@ -8,6 +8,8 @@
       <meta itemprop="name" content="Main Menu">
 
       <!-- <a href="/yapyap.xml" itemprop="url">YapYap</a> -->
+
+      <a href="https://git.sr.ht/~mitjafelicijan" target="_blank" rel="noopener nofollow" itemprop="url">Sourcehut</a>
       <a href="https://github.com/mitjafelicijan" target="_blank" rel="noopener nofollow" itemprop="url">Github</a>
       <a href="/curriculum-vitae.html">CV</a>
 
