Added nerw post

--- a/template/_navigation.html
+++ b/template/_navigation.html
@@ -13,8 +13,8 @@
       <a href="https://github.com/mitjafelicijan" target="_blank" rel="noopener nofollow" itemprop="url">Github</a>
       <a href="/curriculum-vitae.html">CV</a>
 
-      <a href="https://feedbin.com/starred/28977384dcc292a0a400e36cd9bcf64e.xml" itemprop="url">Starred</a>
-      <a href="/feed.rss" itemprop="url">RSS Feed</a>
+      <!-- <a href="https://feedbin.com/starred/28977384dcc292a0a400e36cd9bcf64e.xml" itemprop="url">Starred</a> -->
+      <a href="/feed.rss" itemprop="url">RSS</a>
     </nav>
   </header>
 </div>
