--- a/template/_navigation.html
+++ b/template/_navigation.html
@@ -9,8 +9,8 @@
 
       <!-- <a href="/yapyap.xml" itemprop="url">YapYap</a> -->
 
-      <a href="https://git.sr.ht/~mitjafelicijan" target="_blank" rel="noopener nofollow" itemprop="url">Sourcehut</a>
-      <a href="https://github.com/mitjafelicijan" target="_blank" rel="noopener nofollow" itemprop="url">Github</a>
+      <a href="https://git.mitjafelicijan.com" target="_blank" rel="noopener nofollow" itemprop="url">Git</a>
+      <!--<a href="https://github.com/mitjafelicijan" target="_blank" rel="noopener nofollow" itemprop="url">Github</a>-->
       <a href="/curriculum-vitae.html">CV</a>
 
       <!-- <a href="https://feedbin.com/starred/28977384dcc292a0a400e36cd9bcf64e.xml" itemprop="url">Starred</a> -->
