--- a/template/_navigation.html
+++ b/template/_navigation.html
@@ -10,6 +10,7 @@
       <!-- <a href="/yapyap.xml" itemprop="url">YapYap</a> -->
 
       <a href="https://git.mitjafelicijan.com" target="_blank" rel="noopener nofollow" itemprop="url">Git</a>
+      <a href="https://files.mitjafelicijan.com" target="_blank" rel="noopener nofollow" itemprop="url">Files</a>
       <!--<a href="https://github.com/mitjafelicijan" target="_blank" rel="noopener nofollow" itemprop="url">Github</a>-->
       <a href="/curriculum-vitae.html">CV</a>
 
