--- a/template/_navigation.html
+++ b/template/_navigation.html
@@ -7,7 +7,7 @@
     <nav itemscope itemtype="http://schema.org/SiteNavigationElement" class="main-navigation">
       <meta itemprop="name" content="Main Menu">
 
-      <a href="/yapyap.xml" itemprop="url">YapYap</a>
+      <a href="/yapyap.xml" itemprop="url">YY</a>
 
       <a href="https://git.mitjafelicijan.com" target="_blank" rel="noopener nofollow" itemprop="url">Git</a>
       <a href="https://files.mitjafelicijan.com" target="_blank" rel="noopener nofollow" itemprop="url">Files</a>
