--- a/template/index.html
+++ b/template/index.html
@@ -37,15 +37,13 @@
       <hr class="top-margin">
 
       <section class="project-list">
-        <h4>Side projects I work on</h4>
+        <h4>Side projects I work/worked on</h4>
         <ul>
-          <li><a href="https://github.com/mitjafelicijan/journalctl-proxy" target="_blank" rel="noopener nofollow">journalctl-proxy - Exposes your systemd logs to web via web interface</a></li>
-          <li><a href="https://github.com/mitjafelicijan/redis-marshal" target="_blank" rel="noopener nofollow">redis-marshal - Lightweight Redis data exploration tool</a></li>
-          <li><a href="https://github.com/mitjafelicijan/dna-encoding" target="_blank" rel="noopener nofollow">dna-encoding - Tools for encoding files to DNA sequence</a></li>
-          <li><a href="https://github.com/mitjafelicijan/unfold" target="_blank" rel="noopener nofollow">unfold - Elastic Beanstalk like deployments for DigitalOcean</a></li>
-          <li><a href="https://github.com/mitjafelicijan/vertex" target="_blank" rel="noopener nofollow">vertex - Create mock API's and enrich them with some basic logic and simplify prototyping</a></li>
-          <li><a href="https://github.com/mitjafelicijan/spartan" target="_blank" rel="noopener nofollow">spartan - Spartan minimal UI kit for your applications</a></li>
-          <li><a href="https://github.com/mitjafelicijan/scarecrow" target="_blank" rel="noopener nofollow">scarecrow - Minimal configuration reverse proxy</a></li>
+          <li><a href="https://git.mitjafelicijan.com/journalctl-proxy.git/" target="_blank" rel="noopener nofollow">journalctl-proxy - Exposes your systemd logs to web via web interface</a></li>
+          <li><a href="https://git.mitjafelicijan.com/redis-marshal.git/" target="_blank" rel="noopener nofollow">redis-marshal - Lightweight Redis data exploration tool</a></li>
+          <li><a href="https://git.mitjafelicijan.com/dna-encoding.git/" target="_blank" rel="noopener nofollow">dna-encoding - Tools for encoding files to DNA sequence</a></li>
+          <li><a href="https://git.mitjafelicijan.com/vertex.git/" target="_blank" rel="noopener nofollow">vertex - Create mock API's and add basic logic to simplify prototyping</a></li>
+          <li><a href="https://git.mitjafelicijan.com/scarecrow.git/" target="_blank" rel="noopener nofollow">scarecrow - Minimal configuration reverse proxy</a></li>
         </ul>
       </section>
 
