--- a/template/_navigation.html
+++ b/template/_navigation.html
@@ -7,11 +7,10 @@
     <nav itemscope itemtype="http://schema.org/SiteNavigationElement" class="main-navigation">
       <meta itemprop="name" content="Main Menu">
 
-      <a href="/yapyap.xml" itemprop="url">YY</a>
-
       <a href="https://git.mitjafelicijan.com" target="_blank" rel="noopener nofollow" itemprop="url">Git</a>
       <a href="https://files.mitjafelicijan.com" target="_blank" rel="noopener nofollow" itemprop="url">Files</a>
       <a href="/curriculum-vitae.html">CV</a>
+      <a href="/books.html">Books</a>
 
       <a href="/feed.rss" itemprop="url">RSS</a>
     </nav>
