--- a/template/post.html
+++ b/template/post.html
@@ -31,6 +31,11 @@
 
       <hr class="top-margin">
 
+      <p>
+        <strong>IRC:</strong> You can contact me on IRC <code>irc.libera.chat:6697</code> on channel <code>#mitjafelicijan</code>.
+        Or by going to <a href="https://web.libera.chat/#mitjafelicijan" target="_blank">https://web.libera.chat/#mitjafelicijan</a>.
+      </p>
+
       <section class="comments" data-guid="{{.Slug}}">
         <h4>Comments</h4>
         <form>
